--- a/style.css
+++ b/style.css
@@ -86,6 +86,16 @@ hr {
 #searchForm {
     display: flex;
     flex: 1;
+    /* border: 1px solid black; */
+}
+
+#searchInput {
+    outline: none;
+    border: 1px solid black;
+}
+
+#searchInput:focus {
+    border: 1px solid blue;
 }
 
 #searchInput {
@@ -169,6 +179,7 @@ hr {
     font-weight: bold;
     cursor: pointer;
     border-color: #facc15;
+
 }
 
 #projects {
@@ -302,6 +313,7 @@ hr {
     background-color: aqua;
     border-radius: 20px;
     padding: 10px;
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.1);
 }
 
 #trending .at {
